correct download section

--- a/index.html
+++ b/index.html
@@ -561,8 +561,7 @@ URI     : https://colorlib.com
                     <span class="ti-mobile gradient-fill ti-3x"></span>
                 </div>
                 <h2>Download Anywhere</h2>
-                <p class="tagline">Available for all major mobile and desktop platforms. Rapidiously visualize optimal ROI rather than enterprise-wide
-                    methods of empowerment. </p>
+                <p class="tagline">Available for all major mobile and desktop platforms.</p>
                 <div class="my-4">
 
                     <a href="https://itunes.apple.com/in/app/hellodr/id1255777770?mt=8" class="btn btn-primary">
