--- a/index.html
+++ b/index.html
@@ -43,8 +43,8 @@ URI     : https://colorlib.com
                         <a class="navbar-brand" href="index.html">
                             <img src="images/logo.png" class="img-fluid imgs" alt="logo">
                         </a>
-                        <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbar" aria-controls="navbar"
-                            aria-expanded="false" aria-label="Toggle navigation">
+                        <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbar" aria-controls="navbar" aria-expanded="false"
+                            aria-label="Toggle navigation">
                             <span class="navbar-toggler-icon"></span>
                         </button>
                         <div class="collapse navbar-collapse" id="navbar">
@@ -90,12 +90,20 @@ URI     : https://colorlib.com
 
                 </div>
                 <div class="col-12 col-md-auto">
-                    <form class="form-inline">
-                        <div class="form-group mx-sm-3 mb-2">
+                    <form class="form-inline" name='upviralForm45977' id='' method='post' action='https://app.upviral.com/site/parse_new_users/call/ajax/campId/45977'>
+                        <!-- <div class='form-group'>
+                        <label>Name</label>
+                        <input type='text' name='name'  class='form-control' value=''>
+                        </div> -->
+                        <div class='form-group mx-sm-3 mb-2'>
                             <label for="inputemail" class="sr-only">Enter your email address</label>
-                            <input type="email" class="form-control form-control-lg" id="inputemail" placeholder="Enter your email address">
+                            <input id="inputemail" type='email' name='email' class='form-control form-control-lg' value='' placeholder="Enter your email address">
                         </div>
-                        <button type="submit" class="btn btn-lg btn-primary mb-2">Get Started</button>
+                        <div class='form-group'>
+                            <label></label>
+                            <input type='submit' class="btn btn-lg btn-primary mb-2" name='upviralsubmit' value='Get Started'>
+                            <input type='hidden' name='reflink' value=''>
+                        </div>
                     </form>
                 </div>
                 <div class="col col-lg-2">
@@ -161,7 +169,7 @@ URI     : https://colorlib.com
                                 <div class="media-body">
                                     <h4 class="card-title">Search For Experts</h4>
                                     <p class="card-text">Quickly look up an expert
-                                        </p>
+                                    </p>
                                 </div>
                             </div>
                         </div>
@@ -186,9 +194,9 @@ URI     : https://colorlib.com
                             <div class="media">
                                 <span class="ti-location-arrow gradient-fill ti-3x mr-3"></span>
                                 <div class="media-body">
-                                    <h4 class="card-title">Track Referrals                                </h4>
+                                    <h4 class="card-title">Track Referrals </h4>
                                     <p class="card-text">Anytime anywhere Practice
-                                        </p>
+                                    </p>
                                 </div>
                             </div>
                         </div>
@@ -233,13 +241,13 @@ URI     : https://colorlib.com
 
                             <h2>Communicate with ease</h2>
                             <p class="lead">Use today's technology to deliver your message. </p>
-                            <p>Clear communication lays a solid foundation for a successful referral. HelloDr makes it easy and
-                                dead simple to send a referral. And each referral is seggregated from the other. No more confusions
-                                or mix-ups.
-                            </p>HelloDr ensures delivery of each message by sms. So even if the doctor you refer to does not have 
-                            the app, the concerned doctor will be notified about the referral. Having the app though, makes it much
-                            easier to communicate regarding the patient. You can exchange images and videos as well in addition to
-                            messages if you have the app.
+                            <p>Clear communication lays a solid foundation for a successful referral. HelloDr makes it easy
+                                and dead simple to send a referral. And each referral is seggregated from the other. No more
+                                confusions or mix-ups.
+                            </p>HelloDr ensures delivery of each message by sms. So even if the doctor you refer to does
+                            not have the app, the concerned doctor will be notified about the referral. Having the app though,
+                            makes it much easier to communicate regarding the patient. You can exchange images and videos
+                            as well in addition to messages if you have the app.
                             <p>
                             </p>
                         </div>
@@ -271,14 +279,14 @@ URI     : https://colorlib.com
                             <h2>Realtime Messaging service</h2>
                             <p class="lead">Get the information across quickly. </p>
                             <p>HelloDr messaging service is in real time no matter at which corner of the earth you are located.
-                                Leave a message for your doctor to see. Or better still, if available, start a one to one chat with him.
-                                Leave a thank you note or even send an invitation for a talk. Its a private channel to your favorite
-                                doctor
+                                Leave a message for your doctor to see. Or better still, if available, start a one to one
+                                chat with him. Leave a thank you note or even send an invitation for a talk. Its a private
+                                channel to your favorite doctor
                             </p>
-                            <p>The more information you provide, the easier it is for your doctor to get to a diagnosis quickly. Upload
-                                the xray or the ultrasound report or even clinical pictures, and HelloDr will deliver it to your doctor.
-                                Or maybe you want to upload short videos demoing a particular clinical feature. Its up to you.
-                                And unlimited messaging once you register.
+                            <p>The more information you provide, the easier it is for your doctor to get to a diagnosis quickly.
+                                Upload the xray or the ultrasound report or even clinical pictures, and HelloDr will deliver
+                                it to your doctor. Or maybe you want to upload short videos demoing a particular clinical
+                                feature. Its up to you. And unlimited messaging once you register.
                             </p>
                         </div>
                     </div>
@@ -288,9 +296,8 @@ URI     : https://colorlib.com
                         <div>
                             <h2>Privacy</h2>
                             <p class="lead">All the information you exchange stays secure and private. </p>
-                            <p>All messages stay within the app. No one has access to the information exchange. Messages
-                                are posted over secure channels and stay safe from snooping eyes. No more posting in public
-                                forums. 
+                            <p>All messages stay within the app. No one has access to the information exchange. Messages are
+                                posted over secure channels and stay safe from snooping eyes. No more posting in public forums.
                             </p>
                             <p>Your contact info stays locked and hidden by default until you decide to display it. Period.
                             </p>
@@ -318,10 +325,11 @@ URI     : https://colorlib.com
                             <span class="ti-rocket gradient-fill ti-3x"></span>
                         </div>
                         <h2>HOW CAN WE HELP YOU?</h2>
-                        <p class="mb-4">HelloDr saves your precious time and improves your efficiency by eliminating paper, pencils and calls. 
-                            There is an Indian saying that you are the sum of the five best people in your life. Widen your network beyond the limits
-                            of your hospital or city. Expand the scope of your practice and provide the right expertise for your patients. Patients
-                            will be every grateful to you for having them get the best.
+                        <p class="mb-4">HelloDr saves your precious time and improves your efficiency by eliminating paper, pencils and calls.
+                            There is an Indian saying that you are the sum of the five best people in your life. Widen your
+                            network beyond the limits of your hospital or city. Expand the scope of your practice and provide
+                            the right expertise for your patients. Patients will be every grateful to you for having them
+                            get the best.
 
                         </p>
                         <!-- <a href="#" class="btn btn-primary">Read more</a> -->
@@ -427,7 +435,7 @@ URI     : https://colorlib.com
                 <img src="images/screen1.jpg" alt="image">
                 <img src="images/screen2.jpg" alt="image">
                 <img src="images/screen3.jpg" alt="image">
-                <img src="images/screen1.jpg" alt="image">
+                <!-- <img src="images/screen1.jpg" alt="image"> -->
             </div>
 
         </div>
@@ -457,7 +465,7 @@ URI     : https://colorlib.com
                         <div class="list-group-item">Limited Referrals</div>
                         <div class="list-group-item">Limited Expertice Display</div>
                         <!-- <div class="list-group-item"></div> -->
-                        <!--div class="list-group-item">
+    <!--div class="list-group-item">
                             <del>Search Experts</del>
                         </div>
                         <div class="list-group-item">
@@ -506,7 +514,7 @@ URI     : https://colorlib.com
             <!-- // end .pricing -->
 
 
-        <!--/div>
+    <!--/div>
 
     </div-->
     <!-- // end .section -->
@@ -522,9 +530,9 @@ URI     : https://colorlib.com
             <div class="row pt-4">
                 <div class="col-md-6">
                     <h4 class="mb-3">Can I try before I buy?</h4>
-                    <p class="light-font mb-5">You can send unlimited referrals. There is absolutely no charge for it.
-                        For receving referrals, we offer a month's trial plan. After a month, you will need to buy a 
-                        subscription plan if you want unrestricted referrals through the app.
+                    <p class="light-font mb-5">You can send unlimited referrals. There is absolutely no charge for it. For receving referrals, we offer
+                        a month's trial plan. After a month, you will need to buy a subscription plan if you want unrestricted
+                        referrals through the app.
 
                     </p>
                     <h4 class="mb-3">What payment methods do you accept?</h4>
@@ -536,8 +544,8 @@ URI     : https://colorlib.com
                 <div class="col-md-6">
                     <h4 class="mb-3">Can I change my plan later?</h4>
                     <p class="light-font mb-5">
-                        You are free to change the plan anytime you want. Prorata charges will apply if you drop out in the
-                        middle of a month you have already subscribed to.
+                        You are free to change the plan anytime you want. Prorata charges will apply if you drop out in the middle of a month you
+                        have already subscribed to.
                     </p>
                     <h4 class="mb-3">Do you have a contract?</h4>
                     <p class="light-font mb-5">
@@ -622,7 +630,8 @@ URI     : https://colorlib.com
     <footer class="my-5 text-center">
         <!-- Copyright removal is not prohibited! -->
         <p class="mb-2">
-            <small>COPYRIGHT © 2018. ALL RIGHTS RESERVED. MOBAPP TEMPLATE BY <a href="https://colorlib.com/">COLORLIB</a>
+            <small>COPYRIGHT © 2018. ALL RIGHTS RESERVED. MOBAPP TEMPLATE BY
+                <a href="https://colorlib.com/">COLORLIB</a>
             </small>
         </p>
 
@@ -639,6 +648,15 @@ URI     : https://colorlib.com
     <script src="js/owl.carousel.min.js"></script>
     <!-- Custom JS -->
     <script src="js/script.js"></script>
+    <!-- <iframe class="uvembed45977" frameborder="0"></iframe> -->
+    <script>
+        window.UpviralConfig = {
+            camp: "S&M(4",
+            widget_style: 'iframe',
+            width: "500px"
+        }
+    </script>
+    <script language="javascript" src="https://snippet.upviral.com/upviral.js"></script>
 
 </body>
 
