Changed images with profile pictures
Changed the images with profile pics.

--- a/index.html
+++ b/index.html
@@ -373,7 +373,7 @@ URI     : https://colorlib.com
                     </ul>
                 </div>
                 <div class="col-md-4">
-                    <img src="images/iphonex.png" alt="iphone" class="img-fluid">
+                    <img src="images/iphone.png" alt="iphone" class="img-fluid">
                 </div>
 
             </div>
@@ -435,6 +435,7 @@ URI     : https://colorlib.com
                 <img src="images/screen1.jpg" alt="image">
                 <img src="images/screen2.jpg" alt="image">
                 <img src="images/screen3.jpg" alt="image">
+                <img src="images/screen4.png" alt="image">
                 <!-- <img src="images/screen1.jpg" alt="image"> -->
             </div>
 
