--- a/index.html
+++ b/index.html
@@ -1,13 +1,5 @@
 <!doctype html>
 <html lang="en">
-<!--
-
-Page    : index / MobApp
-Version : 1.0
-Author  : Colorlib
-URI     : https://colorlib.com
-
- -->
 
 <head>
     <title>HelloDr - App by doctors for doctors</title>
@@ -631,14 +623,15 @@ URI     : https://colorlib.com
     <footer class="my-5 text-center">
         <!-- Copyright removal is not prohibited! -->
         <p class="mb-2">
-            <small>COPYRIGHT © 2018. ALL RIGHTS RESERVED. MOBAPP TEMPLATE BY
-                <a href="https://colorlib.com/">COLORLIB</a>
+            <small>COPYRIGHT © 2018. ALL RIGHTS RESERVED. CHECK HEALTH PVT LTD
+                <!-- <a href="https://colorlib.com/">COLORLIB</a> -->
             </small>
         </p>
 
         <small>
-            <a href="https://hellodr-8dc27.firebaseapp.com/HelloDrPrivacyPolicy.html" class="m-2">TERMS</a>
-            <a href="https://hellodr-8dc27.firebaseapp.com/HelloDrPrivacyPolicy.html" class="m-2">PRIVACY</a>
+            <a href="terms.html" class="m-2">TERMS</a>
+            <a href="privacy.html" class="m-2">PRIVACY</a>
+            <a href="about.html" class="m-2">ABOUT</a>
         </small>
     </footer>
 
