--- a/index.html
+++ b/index.html
@@ -1,5 +1,13 @@
 <!doctype html>
 <html lang="en">
+<!--
+
+Page    : index / MobApp
+Version : 1.0
+Author  : Colorlib
+URI     : https://colorlib.com
+
+ -->
 
 <head>
     <title>HelloDr - App by doctors for doctors</title>
@@ -623,8 +631,8 @@
     <footer class="my-5 text-center">
         <!-- Copyright removal is not prohibited! -->
         <p class="mb-2">
-            <small>COPYRIGHT © 2018. ALL RIGHTS RESERVED. CHECK HEALTH PVT LTD
-                <!-- <a href="https://colorlib.com/">COLORLIB</a> -->
+            <small>COPYRIGHT © 2018. ALL RIGHTS RESERVED. MOBAPP TEMPLATE BY
+                <a href="https://colorlib.com/">COLORLIB</a>
             </small>
         </p>
 
