Added meta and description
added meta data and meta description in all three pages

--- a/index.html
+++ b/index.html
@@ -14,8 +14,8 @@ URI     : https://colorlib.com
     <!-- Required meta tags -->
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
-    <meta name="description" content="Mobland - Mobile App Landing Page Template">
-    <meta name="keywords" content="HTML5, bootstrap, mobile, app, landing, ios, android, responsive">
+    <meta name="description" content="HelloDr is a platform to connect with Specialist Doctors in your neighborhood to refer your patients.">
+    <meta name="keywords" content="referrals, hello, hellodr, Hello dr, hello Dr, specialist, doctors, doctor referral, patient referral">
 
     <!-- Font -->
     <link rel="dns-prefetch" href="//fonts.googleapis.com">
@@ -639,7 +639,6 @@ URI     : https://colorlib.com
         <small>
             <a href="terms.html" class="m-2">TERMS</a>
             <a href="privacy.html" class="m-2">PRIVACY</a>
-            <a href="about.html" class="m-2">ABOUT</a>
         </small>
     </footer>
 
