Changed upviral Champign
Changed Upviral champign as GP-dr

--- a/index.html
+++ b/index.html
@@ -90,7 +90,7 @@ URI     : https://colorlib.com
 
                 </div>
                 <div class="col-12 col-md-auto">
-                    <form class="form-inline" name='upviralForm45977' id='' method='post' action='https://app.upviral.com/site/parse_new_users/call/ajax/campId/45977'>
+                    <form class="form-inline" name='upviralForm47179' id='' method='post' action='https://app.upviral.com/site/parse_new_users/call/ajax/campId/47179'>
                         <!-- <div class='form-group'>
                         <label>Name</label>
                         <input type='text' name='name'  class='form-control' value=''>
@@ -649,15 +649,14 @@ URI     : https://colorlib.com
     <script src="js/owl.carousel.min.js"></script>
     <!-- Custom JS -->
     <script src="js/script.js"></script>
-    <!-- <iframe class="uvembed45977" frameborder="0"></iframe> -->
-    <script>
-        window.UpviralConfig = {
-            camp: "S&M(4",
-            widget_style: 'iframe',
-            width: "500px"
-        }
-    </script>
-    <script language="javascript" src="https://snippet.upviral.com/upviral.js"></script>
+    <!-- <iframe class="uvembed47179" frameborder="0" src="https://static.upviral.com/loader.html"></iframe> -->
+<script>
+window.UpviralConfig = {
+camp: "&&844",
+widget_style:'iframe',
+width:"500px"}
+</script>
+<script language="javascript" src="https://snippet.upviral.com/upviral.js"></script>
 
 </body>
 
