chore(index.html): added social media

--- a/index.html
+++ b/index.html
@@ -611,10 +611,10 @@ URI     : https://colorlib.com
                 </div>
                 <div class="col-lg-6">
                     <div class="social-icons">
-                        <a href="#">
+                        <a href="https://www.facebook.com/HelloDr">
                             <span class="ti-facebook"></span>
                         </a>
-                        <a href="#">
+                        <a href="https://twitter.com/HelloDr_CH">
                             <span class="ti-twitter-alt"></span>
                         </a>
                         <!-- <a href="#">
